Node input output grabbing #58267

Closed
opened 2018-11-30 04:05:50 +01:00 by Ryan McEntire · 11 comments

System Information
Operating system: Windows 10 Pro 64 bit
Graphics card: GTX 1060 6GB

Blender Version
Broken: 2.80 4c31bed6b4

Short description of error
Not so much an error, but a work flow problem. When editing nodes, I find myself not selecting the circles outputs on the nodes to attach to other nodes inputs, but instead highlighting a small part of the screen. Did not have an issue with this in 2.79b, maybe you guys can increase the radius selection of the node inputs and outputs? It's just a minor thing compared to a lot of other issues you guys are probably working on, but it is annoying having to zoom in on nodes just to select an output circle to drag to an input circle

Exact steps for others to reproduce the error
Just try and use the nodes, the output selection box is smaller than 2.79b which makes it harder to grab and drag to another input

**System Information** Operating system: Windows 10 Pro 64 bit Graphics card: GTX 1060 6GB **Blender Version** Broken: 2.80 4c31bed6b46 **Short description of error** Not so much an error, but a work flow problem. When editing nodes, I find myself not selecting the circles outputs on the nodes to attach to other nodes inputs, but instead highlighting a small part of the screen. Did not have an issue with this in 2.79b, maybe you guys can increase the radius selection of the node inputs and outputs? It's just a minor thing compared to a lot of other issues you guys are probably working on, but it is annoying having to zoom in on nodes just to select an output circle to drag to an input circle **Exact steps for others to reproduce the error** Just try and use the nodes, the output selection box is smaller than 2.79b which makes it harder to grab and drag to another input
Author

Added subscriber: @chatsies

Added subscriber: @chatsies

#58211 was marked as duplicate of this issue

#58211 was marked as duplicate of this issue

#58342 was marked as duplicate of this issue

#58342 was marked as duplicate of this issue

#58308 was marked as duplicate of this issue

#58308 was marked as duplicate of this issue

Added subscribers: @brecht, @WilliamReynish

Added subscribers: @brecht, @WilliamReynish

It's a conflict between the box select and the node socket operator. @brecht: Can we make box select only kick in if outside the threshold of the node sockets so you can still reliably make node connections?

It's a conflict between the box select and the node socket operator. @brecht: Can we make box select only kick in if outside the threshold of the node sockets so you can still reliably make node connections?
Brecht Van Lommel was assigned by Bastien Montagne 2018-11-30 12:03:24 +01:00
Member

Added subscriber: @real_3ddy

Added subscriber: @real_3ddy

Added subscriber: @oakenstone

Added subscriber: @oakenstone

Added subscriber: @Alaska

Added subscriber: @Alaska

This issue was referenced by 8d4da34883

This issue was referenced by 8d4da34883b25195da28024dc51b2c9b3347d504

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58267
No description provided.