Fix T58267: node socket grabbing not working well with box select tool.